<resources>
    <string name="app_name">My Application fin</string>
    <string name="Administrador">ADMINISTRADOR</string>
    <string name="Cedula">1205436749</string>
    <string name="Nombres">Aura Oliva Taquez Suarez</string>
    <string name="Contraseña">Aura 2020</string>
    <string name="Direccion">Santo Domingo</string>
    <string name="Email">Auri291@hotmail.com</string>
    <string name="Telefono">0978895730</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>