<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout_info_admin"
    tools:context=".Info_admin">

        <FrameLayout
            android:id="@+id/contenido_infoadministrador"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
              </FrameLayout>
    <View
        android:id="@+id/topView"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view5"
        android:layout_width="425dp"
        android:layout_height="69dp"
        android:background="@drawable/ic_wave__1_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="106dp"
        android:layout_height="94dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/Administrador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_person_pin_24"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        tools:ignore="MissingConstraints"
        android:id="@+id/topText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif"
        android:text="ADMINISTRADOR"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/topView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/topnombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="76dp"
        android:fontFamily="sans-serif"
        android:text="@string/Nombres"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/topView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cedula"
        android:layout_width="349dp"
        android:layout_height="59dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_cedula"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/Cedula"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inputPassword"
        android:layout_width="346dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_baseline_lock_open_24"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/Contraseña"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="454dp" />

    <TextView
        android:id="@+id/inputCorreo"
        android:layout_width="349dp"
        android:layout_height="58dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/icon_email"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColorHint="@color/black"
        app:drawableTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="312dp" />

    <TextView
        android:id="@+id/inputDireccion"
        android:layout_width="347dp"
        android:layout_height="54dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_direccion"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/Direccion"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="241dp" />

    <TextView
        android:id="@+id/inputTelefono"
        android:layout_width="353dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/icon_cel"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/Telefono"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColorHint="@color/black"
        app:drawableTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="380dp" />

</androidx.constraintlayout.widget.ConstraintLayout>